# TodoList

./: .gitignore  CMakeLists.txt  README.md  TodoListCompletion.txt  hashTask.cpp  hashTask.hpp
C++/: hashTask.cpp
Python/: hashTask.py
